--- a/localisation/english/replace/zz_evolved_ascension_paths_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_paths_l_english.yml
@@ -1,4 +1,5 @@
-﻿l_english:
+﻿# localisation\english\replace\zz_evolved_ascension_paths_english.yml
+l_english:
 
 
 # ------------------------------------------------------------
@@ -256,9 +257,9 @@
 	situation_tec_ascension_biological_genetics_t2_approach_fast_string:0 "$situation_tec_ascension_biological_genetics_t2_approach_fast$"
 
 	#situation_tec_ascension_genetic_recombination
-	situation_tec_ascension_genetic_recombination:0 "TODO ASCENSION"
+	situation_tec_ascension_genetic_recombination:0 "Genetic Recombination"
 	situation_tec_ascension_genetic_recombination_type:0 "$situation_tec_ascension_genetic_recombination$"
-	situation_tec_ascension_genetic_recombination_desc:0 "TODO ASCENSION"
+	situation_tec_ascension_genetic_recombination_desc:0 "TODO ASCENSION.[tec_genetic_recombination_selection]"
 	situation_tec_ascension_genetic_recombination_fail_tooltip:0 "$tec_situation_impossible_fail$"
 	situation_tec_ascension_genetic_recombination_end_tooltip:0 "TODO ASCENSION"
 	situation_tec_ascension_genetic_recombination_monthly_change_tooltip:0 "$tec_situation_monthly_change$"
@@ -303,6 +304,12 @@
 	situation_tec_ascension_genetic_recombination_approach_fast_desc:0 "TODO ASCENSION"
 	situation_tec_ascension_genetic_recombination_approach_fast_tooltip:0 "$tec_ascension_approach_fast_risk$"
 	situation_tec_ascension_genetic_recombination_approach_fast_string:0 "$situation_tec_ascension_genetic_recombination_approach_fast$"
+
+	tec_gene_recombination_upgrade:0 "\n\n$trigger_tec_warning$ We have decided to focus on §YUpgrading§! one of our traits."
+	tec_gene_recombination_upgrade_main:0 "\n\n$trigger_tec_warning$ We have decided to focus on §YUpgrading§! one of our §YMain§! traits."
+	tec_gene_recombination_upgrade_advanced:0 "\n\n$trigger_tec_warning$ We have decided to focus on §YUpgrading§! one of our §YAdvanced§! traits."
+	tec_gene_recombination_upgrade_normal:0 "\n\n$trigger_tec_warning$ We have decided to focus on §YUpgrading§! one of our §YStandard§! traits."
+	tec_gene_recombination_lotto:0 "\n\n$trigger_tec_warning$ We have decided to focus use our knowledge of genetics to find a §YPositive Genetic Strain§! amongst our genetic repositories."
  # /
  # --------------- T2 Biogenic
 	#situation_tec_ascension_biological_biogenics_t2
@@ -445,8 +452,13 @@
 	situation_tec_ascension_mystical_neutral_t1_stage_minus_2:0 "- II"
 	situation_tec_ascension_mystical_neutral_t1_stage_minus_3:0 "- III"
 
-	situation_tec_ascension_mystical_neutral_t1_approach_standard:0 "Patient Harmony"
-	situation_tec_ascension_mystical_neutral_t1_approach_standard_desc:0 "The path to unlock our potential must be taken slowly, methodically and with stable steps; It will grow over time, safely and steadily, and will be greater than ever"
+	situation_tec_ascension_mystical_neutral_t1_approach_slow:0 "Patient Introspection"
+	situation_tec_ascension_mystical_neutral_t1_approach_slow_desc:0 "The path to unlock our potential must be taken slowly, methodically and with stable steps; It will grow over time, safely and steadily, and will be greater than ever"
+	situation_tec_ascension_mystical_neutral_t1_approach_slow_tooltip:0 "$tec_ascension_approach_slow_risk$"
+	situation_tec_ascension_mystical_neutral_t1_approach_slow_string:0 "$situation_tec_ascension_mystical_neutral_t1_approach_slow$"
+
+	situation_tec_ascension_mystical_neutral_t1_approach_standard:0 "Sought Harmony"
+	situation_tec_ascension_mystical_neutral_t1_approach_standard_desc:0 "TODO ASCENSION"
 	situation_tec_ascension_mystical_neutral_t1_approach_standard_tooltip:0 "$tec_ascension_approach_standard_risk$"
 	situation_tec_ascension_mystical_neutral_t1_approach_standard_string:0 "$situation_tec_ascension_mystical_neutral_t1_approach_standard$"
 
@@ -665,19 +677,11 @@
  # /
  # --------------- T2 Psionics
 	#situation_tec_ascension_mystical_psionics_t2
- # /
- # --------------- T2 Psionics
-	#situation_tec_ascension_mystical_psychics_t2
-
-	#situation_tec_ascension_mystical_psychics_t2_hivemind
- # /
- # Unsorted
-  # situation_tec_ascension_mystical_psionics_t2
-	situation_tec_ascension_mystical_psionics_t2:0 "TODO ASCENSION"
+	situation_tec_ascension_mystical_psionics_t2:0 "Ascendance"
 	situation_tec_ascension_mystical_psionics_t2_type:0 "$situation_tec_ascension_mystical_psionics_t2$"
-	situation_tec_ascension_mystical_psionics_t2_desc:0 "TODO ASCENSION"
+	situation_tec_ascension_mystical_psionics_t2_desc:0 "The power of the psionically gifted individuals of [Owner.GetName] has grown at incredible quantity and quality, and its starting to affect the very foundation of the understanding we have of reality.\nThe way we handle these new discoveries will change us to limits we can't yet understand."
 	situation_tec_ascension_mystical_psionics_t2_fail_tooltip:0 "$tec_situation_impossible_fail$"
-	situation_tec_ascension_mystical_psionics_t2_end_tooltip:0 "TODO ASCENSION"
+	situation_tec_ascension_mystical_psionics_t2_end_tooltip:0 "If we complete this study, we will be able to achieve our goals and obtain a way to further increase our psionic capacities."
 	situation_tec_ascension_mystical_psionics_t2_monthly_change_tooltip:0 "$tec_situation_monthly_change$"
 
 	situation_tec_ascension_mystical_psionics_t2_stage_0:0 "0"
@@ -706,20 +710,28 @@
 	situation_tec_ascension_mystical_psionics_t2_stage_minus_2:0 "- II"
 	situation_tec_ascension_mystical_psionics_t2_stage_minus_3:0 "- III"
 
-	situation_tec_ascension_mystical_psionics_t2_approach_slow:0 "TODO ASCENSION"
-	situation_tec_ascension_mystical_psionics_t2_approach_slow_desc:0 "TODO ASCENSION"
-	situation_tec_ascension_mystical_psionics_t2_approach_slow_tooltip:0 "TODO ASCENSION"
+	situation_tec_ascension_mystical_psionics_t2_approach_slow:0 "Patient Elevation"
+	situation_tec_ascension_mystical_psionics_t2_approach_slow_desc:0 "The true path to illumination demands patience, self-revision and the power of time. Patience is our virtue."
+	situation_tec_ascension_mystical_psionics_t2_approach_slow_tooltip:0 "$tec_ascension_approach_slow_risk$"
 	situation_tec_ascension_mystical_psionics_t2_approach_slow_string:0 "$situation_tec_ascension_mystical_psionics_t2_approach_slow$"
 
-	situation_tec_ascension_mystical_psionics_t2_approach_standard:0 "TODO ASCENSION"
-	situation_tec_ascension_mystical_psionics_t2_approach_standard_desc:0 "TODO ASCENSION"
-	situation_tec_ascension_mystical_psionics_t2_approach_standard_tooltip:0 "TODO ASCENSION"
+	situation_tec_ascension_mystical_psionics_t2_approach_standard:0 "Stoic Introspection"
+	situation_tec_ascension_mystical_psionics_t2_approach_standard_desc:0 "Elevation comes with persistance, with true illumination, time and dedication."
+	situation_tec_ascension_mystical_psionics_t2_approach_standard_tooltip:0 "$tec_ascension_approach_standard_risk$"
 	situation_tec_ascension_mystical_psionics_t2_approach_standard_string:0 "$situation_tec_ascension_mystical_psionics_t2_approach_standard$"
 
-	situation_tec_ascension_mystical_psionics_t2_approach_fast:0 "TODO ASCENSION"
-	situation_tec_ascension_mystical_psionics_t2_approach_fast_desc:0 "TODO ASCENSION"
-	situation_tec_ascension_mystical_psionics_t2_approach_fast_tooltip:0 "TODO ASCENSION"
+	situation_tec_ascension_mystical_psionics_t2_approach_fast:0 "Forced Mindfulness"
+	situation_tec_ascension_mystical_psionics_t2_approach_fast_desc:0 "Unleashing the true secrets of our minds need an extra effort, an effort of will, body and knowledge."
+	situation_tec_ascension_mystical_psionics_t2_approach_fast_tooltip:0 "$tec_ascension_approach_fast_risk$"
 	situation_tec_ascension_mystical_psionics_t2_approach_fast_string:0 "$situation_tec_ascension_mystical_psionics_t2_approach_fast$"
+ # /
+ # --------------- T2 Psionics
+	#situation_tec_ascension_mystical_psychics_t2
+
+	#situation_tec_ascension_mystical_psychics_t2_hivemind
+ # /
+ # Unsorted
+  # situation_tec_ascension_mystical_psionics_t2
 
   # situation_tec_ascension_mystical_psychics_t2
 	situation_tec_ascension_mystical_psychics_t2:0 "TODO ASCENSION"
@@ -729,19 +741,19 @@
 	situation_tec_ascension_mystical_psychics_t2_end_tooltip:0 "TODO ASCENSION"
 	situation_tec_ascension_mystical_psychics_t2_monthly_change_tooltip:0 "$tec_situation_monthly_change$"
 
-	situation_tec_ascension_mystical_psychics_t2_approach_slow:0 "TODO ASCENSION"
+	situation_tec_ascension_mystical_psychics_t2_approach_slow:0 "Peaceful Mindfulness"
 	situation_tec_ascension_mystical_psychics_t2_approach_slow_desc:0 "TODO ASCENSION"
-	situation_tec_ascension_mystical_psychics_t2_approach_slow_tooltip:0 "TODO ASCENSION"
+	situation_tec_ascension_mystical_psychics_t2_approach_slow_tooltip:0 "$tec_ascension_approach_slow_risk$"
 	situation_tec_ascension_mystical_psychics_t2_approach_slow_string:0 "$situation_tec_ascension_mystical_psychics_t2_approach_slow$"
 
-	situation_tec_ascension_mystical_psychics_t2_approach_standard:0 "TODO ASCENSION"
+	situation_tec_ascension_mystical_psychics_t2_approach_standard:0 "Stable Concentration"
 	situation_tec_ascension_mystical_psychics_t2_approach_standard_desc:0 "TODO ASCENSION"
-	situation_tec_ascension_mystical_psychics_t2_approach_standard_tooltip:0 "TODO ASCENSION"
+	situation_tec_ascension_mystical_psychics_t2_approach_standard_tooltip:0 "$tec_ascension_approach_standard_risk$"
 	situation_tec_ascension_mystical_psychics_t2_approach_standard_string:0 "$situation_tec_ascension_mystical_psychics_t2_approach_standard$"
 
-	situation_tec_ascension_mystical_psychics_t2_approach_fast:0 "TODO ASCENSION"
+	situation_tec_ascension_mystical_psychics_t2_approach_fast:0 "Unleashed Mind"
 	situation_tec_ascension_mystical_psychics_t2_approach_fast_desc:0 "TODO ASCENSION"
-	situation_tec_ascension_mystical_psychics_t2_approach_fast_tooltip:0 "TODO ASCENSION"
+	situation_tec_ascension_mystical_psychics_t2_approach_fast_tooltip:0 "$tec_ascension_approach_fast_risk$"
 	situation_tec_ascension_mystical_psychics_t2_approach_fast_string:0 "$situation_tec_ascension_mystical_psychics_t2_approach_fast$"
 
   # situation_tec_ascension_mystical_psychics_t2_hivemind
@@ -754,17 +766,17 @@
 
 	situation_tec_ascension_mystical_psychics_t2_hivemind_approach_slow:0 "TODO ASCENSION"
 	situation_tec_ascension_mystical_psychics_t2_hivemind_approach_slow_desc:0 "TODO ASCENSION"
-	situation_tec_ascension_mystical_psychics_t2_hivemind_approach_slow_tooltip:0 "TODO ASCENSION"
+	situation_tec_ascension_mystical_psychics_t2_hivemind_approach_slow_tooltip:0 "$tec_ascension_approach_slow_risk$"
 	situation_tec_ascension_mystical_psychics_t2_hivemind_approach_slow_string:0 "$situation_tec_ascension_mystical_psychics_t2_hivemind_approach_slow$"
 
 	situation_tec_ascension_mystical_psychics_t2_hivemind_approach_standard:0 "TODO ASCENSION"
 	situation_tec_ascension_mystical_psychics_t2_hivemind_approach_standard_desc:0 "TODO ASCENSION"
-	situation_tec_ascension_mystical_psychics_t2_hivemind_approach_standard_tooltip:0 "TODO ASCENSION"
+	situation_tec_ascension_mystical_psychics_t2_hivemind_approach_standard_tooltip:0 "$tec_ascension_approach_standard_risk$"
 	situation_tec_ascension_mystical_psychics_t2_hivemind_approach_standard_string:0 "$situation_tec_ascension_mystical_psychics_t2_hivemind_approach_standard$"
 
 	situation_tec_ascension_mystical_psychics_t2_hivemind_approach_fast:0 "TODO ASCENSION"
 	situation_tec_ascension_mystical_psychics_t2_hivemind_approach_fast_desc:0 "TODO ASCENSION"
-	situation_tec_ascension_mystical_psychics_t2_hivemind_approach_fast_tooltip:0 "TODO ASCENSION"
+	situation_tec_ascension_mystical_psychics_t2_hivemind_approach_fast_tooltip:0 "$tec_ascension_approach_fast_risk$"
 	situation_tec_ascension_mystical_psychics_t2_hivemind_approach_fast_string:0 "$situation_tec_ascension_mystical_psychics_t2_hivemind_approach_fast$"
 
   # situation_tec_ascension_mystical_ethereals_psi_t2
@@ -777,17 +789,17 @@
 
 	situation_tec_ascension_mystical_ethereals_psi_t2_approach_slow:0 "TODO ASCENSION"
 	situation_tec_ascension_mystical_ethereals_psi_t2_approach_slow_desc:0 "TODO ASCENSION"
-	situation_tec_ascension_mystical_ethereals_psi_t2_approach_slow_tooltip:0 "TODO ASCENSION"
+	situation_tec_ascension_mystical_ethereals_psi_t2_approach_slow_tooltip:0 "$tec_ascension_approach_slow_risk$"
 	situation_tec_ascension_mystical_ethereals_psi_t2_approach_slow_string:0 "$situation_tec_ascension_mystical_ethereals_psi_t2_approach_slow$"
 
 	situation_tec_ascension_mystical_ethereals_psi_t2_approach_standard:0 "TODO ASCENSION"
 	situation_tec_ascension_mystical_ethereals_psi_t2_approach_standard_desc:0 "TODO ASCENSION"
-	situation_tec_ascension_mystical_ethereals_psi_t2_approach_standard_tooltip:0 "TODO ASCENSION"
+	situation_tec_ascension_mystical_ethereals_psi_t2_approach_standard_tooltip:0 "$tec_ascension_approach_standard_risk$"
 	situation_tec_ascension_mystical_ethereals_psi_t2_approach_standard_string:0 "$situation_tec_ascension_mystical_ethereals_psi_t2_approach_standard$"
 
 	situation_tec_ascension_mystical_ethereals_psi_t2_approach_fast:0 "TODO ASCENSION"
 	situation_tec_ascension_mystical_ethereals_psi_t2_approach_fast_desc:0 "TODO ASCENSION"
-	situation_tec_ascension_mystical_ethereals_psi_t2_approach_fast_tooltip:0 "TODO ASCENSION"
+	situation_tec_ascension_mystical_ethereals_psi_t2_approach_fast_tooltip:0 "$tec_ascension_approach_fast_risk$"
 	situation_tec_ascension_mystical_ethereals_psi_t2_approach_fast_string:0 "$situation_tec_ascension_mystical_ethereals_psi_t2_approach_fast$"
 
   # situation_tec_ascension_mystical_ethereals_psy_t2
@@ -800,17 +812,17 @@
 
 	situation_tec_ascension_mystical_ethereals_psy_t2_approach_slow:0 "TODO ASCENSION"
 	situation_tec_ascension_mystical_ethereals_psy_t2_approach_slow_desc:0 "TODO ASCENSION"
-	situation_tec_ascension_mystical_ethereals_psy_t2_approach_slow_tooltip:0 "TODO ASCENSION"
+	situation_tec_ascension_mystical_ethereals_psy_t2_approach_slow_tooltip:0 "$tec_ascension_approach_slow_risk$"
 	situation_tec_ascension_mystical_ethereals_psy_t2_approach_slow_string:0 "$situation_tec_ascension_mystical_ethereals_psy_t2_approach_slow$"
 
 	situation_tec_ascension_mystical_ethereals_psy_t2_approach_standard:0 "TODO ASCENSION"
 	situation_tec_ascension_mystical_ethereals_psy_t2_approach_standard_desc:0 "TODO ASCENSION"
-	situation_tec_ascension_mystical_ethereals_psy_t2_approach_standard_tooltip:0 "TODO ASCENSION"
+	situation_tec_ascension_mystical_ethereals_psy_t2_approach_standard_tooltip:0 "$tec_ascension_approach_standard_risk$"
 	situation_tec_ascension_mystical_ethereals_psy_t2_approach_standard_string:0 "$situation_tec_ascension_mystical_ethereals_psy_t2_approach_standard$"
 
 	situation_tec_ascension_mystical_ethereals_psy_t2_approach_fast:0 "TODO ASCENSION"
 	situation_tec_ascension_mystical_ethereals_psy_t2_approach_fast_desc:0 "TODO ASCENSION"
-	situation_tec_ascension_mystical_ethereals_psy_t2_approach_fast_tooltip:0 "TODO ASCENSION"
+	situation_tec_ascension_mystical_ethereals_psy_t2_approach_fast_tooltip:0 "$tec_ascension_approach_fast_risk$"
 	situation_tec_ascension_mystical_ethereals_psy_t2_approach_fast_string:0 "$situation_tec_ascension_mystical_ethereals_psy_t2_approach_fast$"
  # /
 # /
@@ -853,13 +865,13 @@
 	situation_tec_ascension_technoorganic_neutral_t1_stage_minus_2:0 "- II"
 	situation_tec_ascension_technoorganic_neutral_t1_stage_minus_3:0 "- III"
 
-	situation_tec_ascension_technoorganic_neutral_t1_approach_slow:0 "Procedural Deployment"
-	situation_tec_ascension_technoorganic_neutral_t1_approach_slow_desc:0 "Radical changes deserve a cautious and constant observation, we need to take this process with a methodical and safe approach."
+	situation_tec_ascension_technoorganic_neutral_t1_approach_slow:0 "Safe Deployment"
+	situation_tec_ascension_technoorganic_neutral_t1_approach_slow_desc:0 "Radical changes deserve a cautious and constant observation, we need to take this process with a safe and measured approach."
 	situation_tec_ascension_technoorganic_neutral_t1_approach_slow_tooltip:0 "$tec_ascension_approach_slow_risk$"
 	situation_tec_ascension_technoorganic_neutral_t1_approach_slow_string:0 "$situation_tec_ascension_technoorganic_neutral_t1_approach_slow$"
 
 	situation_tec_ascension_technoorganic_neutral_t1_approach_standard:0 "Procedural Deployment"
-	situation_tec_ascension_technoorganic_neutral_t1_approach_standard_desc:0 "Radical changes deserve a cautious and constant observation, we need to take this process with a methodical and safe approach."
+	situation_tec_ascension_technoorganic_neutral_t1_approach_standard_desc:0 "A technology potentially able to alter our very physiognomy requires a constant and methodical development."
 	situation_tec_ascension_technoorganic_neutral_t1_approach_standard_tooltip:0 "$tec_ascension_approach_standard_risk$"
 	situation_tec_ascension_technoorganic_neutral_t1_approach_standard_string:0 "$situation_tec_ascension_technoorganic_neutral_t1_approach_standard$"
 
@@ -1201,7 +1213,7 @@
 	situation_tec_ascension_technoorganic_cybernetics_t2_approach_standard_string:0 "$situation_tec_ascension_technoorganic_cybernetics_t2_approach_standard$"
 
 	situation_tec_ascension_technoorganic_cybernetics_t2_approach_fast:0 "TODO ASCENSION"
-	situation_tec_ascension_technoorganic_cybernetics_t2_approach_fast:desc:0 "TODO ASCENSION"
+	situation_tec_ascension_technoorganic_cybernetics_t2_approach_fast_desc:0 "TODO ASCENSION"
 	situation_tec_ascension_technoorganic_cybernetics_t2_approach_fast_tooltip:0 "$tec_ascension_approach_fast_risk$"
 	situation_tec_ascension_technoorganic_cybernetics_t2_approach_fast_string:0 "$situation_tec_ascension_technoorganic_cybernetics_t2_approach_fast$"
 
@@ -1223,7 +1235,7 @@
 	situation_tec_ascension_technoorganic_bioware_t2_approach_standard_string:0 "$situation_tec_ascension_technoorganic_bioware_t2_approach_standard$"
 
 	situation_tec_ascension_technoorganic_bioware_t2_approach_fast:0 "TODO ASCENSION"
-	situation_tec_ascension_technoorganic_bioware_t2_approach_fast:desc:0 "TODO ASCENSION"
+	situation_tec_ascension_technoorganic_bioware_t2_approach_fast_desc:0 "TODO ASCENSION"
 	situation_tec_ascension_technoorganic_bioware_t2_approach_fast_tooltip:0 "$tec_ascension_approach_fast_risk$"
 	situation_tec_ascension_technoorganic_bioware_t2_approach_fast_string:0 "$situation_tec_ascension_technoorganic_bioware_t2_approach_fast$"
 
@@ -2188,7 +2200,7 @@
  # --------------- GENE T2 EVENT
 	tec_gene_path.200.name:0 "The Search for Perfection"
 	tec_gene_path.200.desc.regular:0 "As we drive our knowledge closer to discover the secrets of life, we must invest a further effort in order to really unlock all our capacities.\n\nWhile it may be costly, we will make [Root.GetName] be set in history as the ones who changed the very foundation of biological creation, the ones who fully decyphered their genetic code and understood our very foundation.\n\nWe will known as the ones who reached perfection."
-	tec_gene_path.200.desc.hive:0 "$tec_gene_path.200.desc.hive$"
+	tec_gene_path.200.desc.hive:0 "$tec_gene_path.200.desc.regular$"
 	tec_gene_path.200.slow:0 "Proceed carefully."
 	# TODO ASCENSION - CHANGE OPTION AND TOOLTIPS
 	tec_gene_path.200.slow.tooltip:0 "The §Y$situation_approach_tec_gene_path_t2$§! Situation is available.\nWe will change our approach towards a §Y$situation_approach_tec_gene_path_t2_slow$§! of new cybernetic improvements.\nThis make the conducted research and deployment of potential genetic changes slower, but less costly and, overall, §GSafer§!"
