--- a/localisation/english/zz_evolved_opinion_l_english.yml
+++ b/localisation/english/zz_evolved_opinion_l_english.yml
@@ -19,15 +19,15 @@
  opinion_competitive_neg_3:0 "Capitalist Exploiters"
  opinion_competitive_neg_4:0 "Capitalist Exploiters"
  
- opinion_green_pos_1:0 "Friends of Nature"
- opinion_green_pos_2:0 "Friends of Nature"
- opinion_green_pos_3:0 "Friends of Nature"
- opinion_green_pos_4:0 "Friends of Nature"
+ opinion_ecologist_pos_1:0 "Friends of Nature"
+ opinion_ecologist_pos_2:0 "Friends of Nature"
+ opinion_ecologist_pos_3:0 "Friends of Nature"
+ opinion_ecologist_pos_4:0 "Friends of Nature"
  
- opinion_green_neg_1:0 "Dumb-ass Tree-Huggers"
- opinion_green_neg_2:0 "Dumb-ass Tree-Huggers"
- opinion_green_neg_3:0 "Dumb-ass Tree-Huggers"
- opinion_green_neg_4:0 "Dumb-ass Tree-Huggers" 
+ opinion_ecologist_neg_1:0 "Dumb-ass Tree-Huggers"
+ opinion_ecologist_neg_2:0 "Dumb-ass Tree-Huggers"
+ opinion_ecologist_neg_3:0 "Dumb-ass Tree-Huggers"
+ opinion_ecologist_neg_4:0 "Dumb-ass Tree-Huggers" 
  
  opinion_industrial_pos_1:0 "Fellow Engineers"
  opinion_industrial_pos_2:0 "Fellow Engineers"
