more ascension adjustments

--- a/localisation/english/replace/zz_evolved_ascension_paths_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_paths_l_english.yml
@@ -259,7 +259,7 @@ l_english:
 	#situation_tec_ascension_genetic_recombination
 	situation_tec_ascension_genetic_recombination:0 "Genetic Recombination"
 	situation_tec_ascension_genetic_recombination_type:0 "$situation_tec_ascension_genetic_recombination$"
-	situation_tec_ascension_genetic_recombination_desc:0 "TODO ASCENSION.[tec_genetic_recombination_selection]"
+	situation_tec_ascension_genetic_recombination_desc:0 "Using our expertise of genetic alteration capacities, we can further improve our kind as a whole.\nWe just need the time and means necessary.[tec_genetic_recombination_selection]"
 	situation_tec_ascension_genetic_recombination_fail_tooltip:0 "$tec_situation_impossible_fail$"
 	situation_tec_ascension_genetic_recombination_end_tooltip:0 "TODO ASCENSION"
 	situation_tec_ascension_genetic_recombination_monthly_change_tooltip:0 "$tec_situation_monthly_change$"
@@ -1880,12 +1880,12 @@ l_english:
 
 	situation_approach_tec_test_bidirectional_slow:0 "Slow"
 	situation_approach_tec_test_bidirectional_slow_effect:0 "TODO ASCENSION"
-	situation_approach_tec_test_bidirectional_neutral:0 "Neutral"
-	situation_approach_tec_test_bidirectional_neutral_effect:0 "TODO ASCENSION"
+	situation_approach_tec_test_bidirectional_standard:0 "Neutral"
+	situation_approach_tec_test_bidirectional_standard_effect:0 "TODO ASCENSION"
 	situation_approach_tec_test_bidirectional_fast:0 "Fast"
 	situation_approach_tec_test_bidirectional_fast_effect:0 "TODO ASCENSION"
 
-	situation_string_tec_test_bidirectional_neutral:0 "$situation_approach_tec_test_bidirectional_neutral$"
+	situation_string_tec_test_bidirectional_neutral:0 "$situation_approach_tec_test_bidirectional_standard$"
 	situation_string_tec_test_bidirectional_slow:0 "$situation_approach_tec_test_bidirectional_slow$"
 	situation_string_tec_test_bidirectional_fast:0 "$situation_approach_tec_test_bidirectional_fast$"
 # /
