more ascension changes

--- a/localisation/english/replace/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_l_english.yml
@@ -347,7 +347,7 @@
 # ------------------------------------------------- Biological Base
  # Base
 	ap_engineered_evolution:0 "Engineered Evolution"
-	ap_engineered_evolution_desc:0 "$tec_loc_ap_type_biological$ - $tec_loc_ap_type_base$\n\n§LTo leave our genetic destiny in the hands of nature is an inefficient and excruciatingly slow process. Why not jump-start the future of our species?§!"
+	ap_engineered_evolution_desc:0 "$tec_loc_ap_type_biological$ - $tec_loc_ap_type_base$\n§LTo leave our genetic destiny in the hands of nature is an inefficient and excruciatingly slow process. Why not jump-start the future of our species?§!"
 
 	ap_engineered_evolution_tooltip:0 "$tec_loc_ap_u_situation$ §H$situation_tec_ascension_biological_neutral_t1$§! ['concept_tec_branching_paths_icon']\n- The §Y$situation_tec_ascension_biological_neutral_t1$§! situation will help us improve the very foundation of our species.\n\n"
 	# Unlocks
@@ -358,17 +358,17 @@
  # /
  # Genetics
 	ap_engineered_evolution_genetics:0 "Driven Evolution"
-	ap_engineered_evolution_genetics_desc:0 "$tec_loc_ap_type_biological$ - $tec_loc_ap_type_base$\n\n§LTo leave our genetic destiny in the hands of nature is an inefficient and excruciatingly slow process. Why not jump-start the future of our species?§!"
+	ap_engineered_evolution_genetics_desc:0 "$tec_loc_ap_type_biological$ - $tec_loc_ap_type_base$\n§LTo leave our genetic destiny in the hands of nature is an inefficient and excruciatingly slow process. Why not jump-start the future of our species?§!"
 
-	ap_engineered_evolution_genetics_tooltip:0 "$tec_loc_ap_chosen_path$ §GGenetics§!\nWe have discovered a way to improve the genetic makeup of our species with safe and directed changes.\n\n$tec_loc_ap_u_feature$ §HGenetic Malleability§!\nThe cost of §Hbasic traits§! is reduced by §Y1§! (up to 1 trait point cost), allowing more diverse Biological Species modifications.\n\n"
-	ap_engineered_evolution_genetics_tradition:0 "$tec_loc_ap_u_tradition$ §H$tradition_genetics$§!\nUnlocks the §Y$tradition_genetics$§! traditions after researching the provided technologies and completing the associated $tec_loc_situation$.\n\n$tec_tradition_unlock_evolved_paths$"
+	ap_engineered_evolution_genetics_tooltip:0 "$tec_loc_ap_chosen_path$ §GGenetics§!\n§LWe have discovered a way to improve the genetic makeup of our species with safe and directed changes.§!\n\n$tec_loc_ap_u_feature$ §HGenetic Malleability§!\n- The cost of §HBasic Traits§! is reduced by §Y1§! (up to 1 trait point cost), allowing more diverse Biological Species modifications.\n\n"
+	ap_engineered_evolution_genetics_tradition:0 "$tec_loc_ap_u_tradition$ §H$tradition_genetics$§!\n- Unlocks the §Y$tradition_genetics$§! traditions after researching the provided technologies and completing the associated $tec_loc_situation$.\n\n$tec_tradition_unlock_evolved_paths$"
  # /
  # Biogenics
 	ap_engineered_evolution_biogenics:0 "Forced Evolution"
 	ap_engineered_evolution_biogenics_desc:0 "$tec_loc_ap_type_biological$ - $tec_loc_ap_type_base$\n\n§LWe have taken the reins of our genetic destiny in the hands of nature is an inefficient and excruciatingly slow process. Why not jump-start the future of our species?§!"
 
-	ap_engineered_evolution_biogenics_tooltip:0 "$tec_loc_ap_chosen_path$ §GBiogenics§!\nWe have discovered a way to produce adaptive micro-mutations in the genetic structure of our species.\n\n$tec_loc_ap_u_feature$ §HTODO§!\nTODO\n\n"
-	ap_engineered_evolution_biogenics_tradition:0 "$tec_loc_ap_u_tradition$ §H$tradition_tec_biogenics$§!\nUnlocks the §Y$tradition_tec_biogenics$§! traditions after researching the provided technologies and completing the associated $tec_loc_situation$.\n\n$tec_tradition_unlock_evolved_paths$"
+	ap_engineered_evolution_biogenics_tooltip:0 "$tec_loc_ap_chosen_path$ §GBiogenics§!\n§LWe have discovered a way to produce adaptive micro-mutations in the genetic structure of our species.§!\n\n$tec_loc_ap_u_feature$ §HTODO§!\n- TODO\n\n"
+	ap_engineered_evolution_biogenics_tradition:0 "$tec_loc_ap_u_tradition$ §H$tradition_tec_biogenics$§!\n- Unlocks the §Y$tradition_tec_biogenics$§! traditions after researching the provided technologies and completing the associated $tec_loc_situation$.\n\n$tec_tradition_unlock_evolved_paths$"
  # /
 # /
 
