--- a/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
+++ b/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
@@ -1048,11 +1048,11 @@ l_english:
 	district_tec_hab_extraction_no_food:0 "§Y$tec_loc_c_warning$ - $tec_loc_food$ passive production has been redirected to $district_tec_hab_food$s§!."
 
 	# Energy
-	district_hab_energy_effect_production:0 "This $tec_loc_district$ produce extra §Y$tec_loc_energy$§! based on the the number of §YOrbitals§! of its type (£energy£)"
+	district_hab_energy_effect_production:0 "This $tec_loc_district$ jobs and bound Orbitals increase the §Y$tec_loc_energy$§! production of §YSubhabitats§! of its type (£energy£)"
 	district_hab_energy_effect_buildings:0 "$t$- Increases the effects of §Y£building£ Energy Orbital Buildings§!."
 	district_hab_energy_effect_orbitals:0 "\n§HCurrent Orbitals:§! $TABBED_NEW_LINE$ $tec_loc_energy$ §Y[solar_system.GetNumOrbitalsEnergy]/[solar_system.GetMaxOrbitalsEnergy]§!\n\n"
 	# Minerals
-	district_hab_mining_effect_production:0 "This $tec_loc_district$ produce extra §Y$tec_loc_minerals$§! based on the the number of §YOrbitals§! of its type (£minerals£)"
+	district_hab_mining_effect_production:0 "This $tec_loc_district$ jobs and bound Orbitals increase the §Y$tec_loc_minerals$§! production of §YSubhabitats§! of its type (£minerals£)"
 	district_hab_mining_effect_buildings:0 "$t$- Increases the effects of §Y£building£ Minerals Orbital Buildings§!."
 	district_hab_mining_effect_orbitals:0 "\n§HCurrent Orbitals:§! $TABBED_NEW_LINE$ $tec_loc_minerals$ §Y[solar_system.GetNumOrbitalsMining]/[solar_system.GetMaxOrbitalsMining]§!\n\n"
 	# Food
@@ -1060,7 +1060,7 @@ l_english:
 	district_tec_hab_food_plural:0 "Hydroponic Districts"
 	district_tec_hab_food_desc:0 "Entire corridors and sections of this Habitat are filled with hydroponic installations generating biological material with artificially enhanced cycles."
 	# \n\nDue to the special requirements this district needs, it's only possible to obtain when the habitat is built §Yorbiting§! a resourceless §YGas giant§! or §YFrozen planet§!."
-	district_tec_hab_food_effect_production:0 "This $tec_loc_district$ produce extra §Y$tec_loc_food$§! based on the the number of §Y£building£ Hydroponic§! buildings of its type (£food£), and the Habitat Upgrade level"
+	district_tec_hab_food_effect_production:0 "This $tec_loc_district$ jobs increase the §Y$tec_loc_food$§! production of §YSubhabitats§! of its type (£food£)"
 	district_tec_hab_food_effect_buildings:0 "$t$- Increases the effects of §Y£building£ Food Orbital Buildings§!."
 	district_tec_hab_food_effect_orbitals:0 "\n§HCurrent Hydroponic Boost:§! $TABBED_NEW_LINE$ $tec_loc_food$ +§Y[this.GetHydroponicNumbers]§!\n\n"
 
