--- a/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
+++ b/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
@@ -144,8 +144,9 @@
 	tr_genetics_enhanced_expression_tooltip:0 "Can §YAlter§! Pop §YAppearance§! with Species Modification."
 
 	tr_genetics_efficient_cloning:0 "Stem Cell Stimulation"
-	tr_genetics_efficient_cloning_tooltip:0 "£building£ §YCloning Buildings§! replace their passive biological assembly and jobs with a single §YMaster Cloner§! job, which provide dynamic and additional £mod_pop_growth_speed£ §YOrganic Pop Assembly§! and £society£ §YSociety§! Research based on the building tier, and a moderate amount of §Y$tec_loc_unity$§!."
-	#"£job_tec_cloner£ Cloner jobs produce 1 extra §Y$tec_loc_organic_assembly$§!"
+	tr_genetics_efficient_cloning_tooltip:0 "§Y$tec_loc_organic_assembly$§! increased by §G5%§! per $tec_loc_capital_tier$.\nThis effect is increased per §Y$tec_loc_planet_ascension$§!."
+	# 3.12 - "£building£ §YCloning Buildings§! replace their passive biological assembly and jobs with a single §YMaster Cloner§! job, which provide dynamic and additional £mod_pop_growth_speed£ §YOrganic Pop Assembly§! and £society£ §YSociety§! Research based on the building tier, and a moderate amount of §Y$tec_loc_unity$§!."
+	# 3.9 - "£job_tec_cloner£ Cloner jobs produce 1 extra §Y$tec_loc_organic_assembly$§!"
 
 	tr_genetics_retrovirus:0 "Retroviral Manipulation"
 
